gnome-shell crash when screencasting if stop/restart pipewire
Affected version
GNOME Shell 3.36.1 mutter 3.36.1 linux kernel 5.6.4-300.fc32.x86_64 gnome-shell#1 (closed) SMP Mon Apr 13 14:31:58 UTC 2020 x86_64 x86_64 x86_64 GNU/Linux Fedora 32 Wayland session
Bug summary
Enable screencasting on https://mozilla.github.io/webrtc-landing/gum_test.html, during screencast stop pipewire via systemctl --user stop pipewire the gnome-shell crash
Steps to reproduce
- Goto https://mozilla.github.io/webrtc-landing/gum_test.html
- click screen capture button
- share screen or window
- open terminal and execute systemctl --user stop pipewire
- Gnome shell crash